k0s-services/meilisearch/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meilisearch
  namespace: private-cloud
  labels:
    app.kubernetes.io/name: meilisearch
spec:
  selector:
    app.kubernetes.io/name: meilisearch
  ports:
    - {name: http, port: 7700, targetPort: http, protocol: TCP}
